--- a/groups.yaml
+++ b/groups.yaml
@@ -116,6 +116,7 @@ pi_status:
     - sensor.disk_used_
     - sensor.disk_used_mnt
     - sensor.speedtest_download
+    - sensor.last_backup
 
 pihole_stats:
   name: PiHole Stats
