--- a/customize.yaml
+++ b/customize.yaml
@@ -118,3 +118,9 @@ weblink.transmission:
 sensor.last_backup:
   icon: mdi:backup-restore
 input_boolean.enable_security: {}
+sensor.fibaro_office_battery_level:
+  friendly_name: Office Fibaro
+  icon: mdi:battery-90
+sensor.fibaro_thomas_battery_level:
+  friendly_name: Thomas' Fibaro
+  icon: mdi:battery-90
