--- a/sensors.yaml
+++ b/sensors.yaml
@@ -35,10 +35,10 @@
   sensors:
     fibaro_office_battery_level:
       unit_of_measurement: '%'
-      value_template: "{{ states.zwave.office_motion.attributes.battery_level }}"
+      value_template: "{{ states.zwave.office_motion.attributes.battery_level | default(0) | int }}"
     fibaro_thomas_battery_level:
       unit_of_measurement: '%'
-      value_template: "{{ states.zwave.thomas.attributes.battery_level }}"
+      value_template: "{{ states.zwave.thomas.attributes.battery_level  | default(0) | int  }}"
       
 - platform: pi_hole
   monitored_conditions:
