--- a/groups.yaml
+++ b/groups.yaml
@@ -126,6 +126,7 @@ pi_status:
 pihole_stats:
   name: PiHole Stats
   entities:
+    - switch.pihole
     - sensor.pihole_ads_blocked_today
     - sensor.pihole_ads_percentage_blocked_today
     - sensor.pihole_dns_unique_clients
