--- a/configuration.yaml
+++ b/configuration.yaml
@@ -56,6 +56,13 @@ switch:
   - platform: flux
     lights:
       - light.bedroom
+  - platform: command_line
+    switches:
+      pihole:
+        command_on: "curl -X GET 'http://192.168.1.65/admin/api.php?enable&auth='"
+        command_off: "curl -X GET 'http://192.168.1.65/admin/api.php?disable=3600&auth='"
+        command_state: "curl -X GET 'http://192.168.1.65/admin/api.php?status'"
+        value_template: "{{ value_json.status == 'enabled' }}"
 
 input_boolean:
   enable_security:
