--- a/configuration.yaml
+++ b/configuration.yaml
@@ -15,6 +15,8 @@ http:
   base_url: !secret base_url
   ssl_certificate: !secret ssl_certificate
   ssl_key: !secret ssl_key
+  ip_ban_enabled: True
+  login_attempts_threshold: 3
 
 updater:
 group: !include groups.yaml
