--- a/configuration.yaml
+++ b/configuration.yaml
@@ -82,7 +82,13 @@ input_boolean:
 
 panel_custom:
   - name: floorplan
-    sidebar_title: Floorplan
-    sidebar_icon: mdi:home
+    sidebar_title: Floor Plan (Mobile)
+    sidebar_icon: mdi:floor-plan
     url_path: floorplan
     config: !include floorplan.yaml
+
+  - name: floorplan
+    sidebar_title: Floor Plan (Desktop)
+    sidebar_icon: mdi:floor-plan
+    url_path: floorplan2
+    config: !include floorplan2.yaml
