--- a/floorplan2.yaml
+++ b/floorplan2.yaml
@@ -20,6 +20,8 @@
           states:
             - state: 'not_home'
               class: 'transparent'
+            - state: 'SEL'
+              class: 'transparent'
 
         - name: Motion
           entities:
@@ -29,23 +31,18 @@
             - state: 'on'
               class: 'danger-background'
             - state: 'off'
-              class: 'unclickable'
+              class: 'invisible'
 
-        - name: Sensors
+        - name: Weather Temperature
           entities:
-             -  sensor.dark_sky_apparent_temperature
+             - sensor.dark_sky_apparent_temperature
           #text_template: '${entity.state ? entity.state : "unknown"}'
           # An example of rounding up a number, i.e. a temperature of 90.1 becomes 91
           text_template: '${entity.state} °c'
-          class_template: '
-            var temp = parseFloat(entity.state.replace("°", ""));
-            if (temp < 10)
-              return "temp-low";
-            else if (temp < 30)
-              return "temp-medium";
-            else
-              return "temp-high";
-            '
+          
+        - name: Weather Summary
+          entities:
+            - sensor.dark_sky_summary
 
         - name: Lights
           entities:
