--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -21,6 +21,13 @@
             - state: 'not_home'
               class: 'transparent'
 
+        - name: Media Players
+          entities:
+            - media_player.bedroom
+          states:
+            - state: 'off'
+              class: 'invisible'
+        
         - name: Motion
           entities:
             - binary_sensor.thomas_sensor
