--- a/sensors.yaml
+++ b/sensors.yaml
@@ -18,6 +18,7 @@
     - type: disk_use_percent
       arg: /mnt
     - type: memory_use_percent
+    - type: since_last_boot
     - type: load_1m
     - type: load_5m
     - type: load_15m
