--- a/customize.yaml
+++ b/customize.yaml
@@ -143,6 +143,12 @@ switch.flux:
 sensor.process_homebridge:
   friendly_name: HomeBridge
   icon: mdi:home-automation
-# binary_sensor.floorplan:
-#   custom_ui_state_card: state-card-floorplan
-#   config: !include floorplan.yaml
+script.camera_thomas_bed:
+  friendly_name: Face bed
+  icon: mdi:hotel
+script.camera_thomas_door:
+  friendly_name: Face door
+  icon: mdi:door
+script.camera_thomas_floor:
+  friendly_name: Face floor
+  icon: mdi:arrow-collapse-down
