--- a/shell_commands.yaml
+++ b/shell_commands.yaml
@@ -4,3 +4,5 @@ thomas_camera_floor: !secret thomas_camera_floor_url
 thomas_camera_door: !secret thomas_camera_door_url
 hall_camera_enable_detection: !secret hall_camera_enable_detection
 hall_camera_disable_detection: !secret hall_camera_disable_detection
+landing_camera_enable_detection: !secret landing_camera_enable_detection
+landing_camera_disable_detection: !secret landing_camera_disable_detection
