--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -1,8 +1,8 @@
 http_password: 0
 api_password: 0
 api_password2: 0
-ssl_certificate: ''
-ssl_key: ''
+ssl_certificate: '/'
+ssl_key: '/'
 latitude: 0
 longitude: 0
 base_url: example.com:8123
