Add customised components

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 secrets.yaml
 lastbackup.txt
+www/custom_ui/npm-debug.log
+www/custom_ui/state-card-custom-ui.html.gz
+www/custom_ui/state-card-custom-ui.html.html
+custom_compnents/customizer/*
+www/custom_ui/state-card-custom-ui.html
+custom_components/customizer/__init__.py
