--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -1,18 +1,10 @@
       name: Floorplan
       image: /local/custom_ui/floorplan/floorplan.svg
       stylesheet: /local/custom_ui/floorplan/floorplan.css
-      
-      # These options are optional
       warnings:                  # enable warnings (to find out why things might ot be working correctly)
-      # pan_zoom:                  # enable experimental panning / zooming
-      # hide_app_toolbar:          # hide the application toolbar (when used as a custom panel)
       date_format: DD/MMM/YYYY   # Date format to use in hover-over text
-      
-      # last_motion_entity: sensor.template_last_motion
-      # last_motion_class: last-motion
 
       groups:
-
         - name: Trackers
           entities:
             - device_tracker.lynette_iphone
@@ -65,3 +57,4 @@
             - camera.drive
             - camera.garden
             - camera.hall
+            - camera.landing
