--- a/floorplan2.yaml
+++ b/floorplan2.yaml
@@ -8,11 +8,7 @@
       # hide_app_toolbar:          # hide the application toolbar (when used as a custom panel)
       date_format: DD/MMM/YYYY   # Date format to use in hover-over text
       
-      # last_motion_entity: sensor.template_last_motion
-      # last_motion_class: last-motion
-
       groups:
-
         - name: Trackers
           entities:
             - device_tracker.lynette_iphone
@@ -71,3 +67,4 @@
             - camera.drive
             - camera.garden
             - camera.hall
+            - camera.landing
