--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ custom_compnents/customizer/*
 www/custom_ui/state-card-custom-ui.html
 custom_components/customizer/__init__.py
 update.sh
+custom_components/customizer/services.yaml
