--- a/configuration.yaml
+++ b/configuration.yaml
@@ -46,6 +46,26 @@ http:
 recorder:
   purge_interval: 1
   purge_keep_days: 7
+  exclude:
+    entities:
+      - sensor.since_last_boot
+      - sensor.ram_used
+      - sensor.disk_used_
+      - sensor.disk_used_mnt
+      - sensor.speedtest_download
+      - sensor.last_backup
+      - sun.sun
+      - camera.drive
+      - camera.hall
+      - camera.landing
+      - camera.garden
+      - camera.thomas
+      - zwave.office_motion
+      - zwave.desk_lights
+      - group.all_switches
+      - sensor.pihole_ads_percentage_today
+      - group.all_motion_sensors
+
 updater:
 group: !include groups.yaml
 automation: !include automations.yaml
