--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -1,8 +1,8 @@
 http_password: 0
 api_password: 0
 api_password2: 0
-ssl_certificate: '/'
-ssl_key: '/'
+ssl_certificate: 'travis_fake_certificate.fake_crt'
+ssl_key: 'travis_fake_key.fake_ke'
 latitude: 0
 longitude: 0
 base_url: example.com:8123
