--- a/groups.yaml
+++ b/groups.yaml
@@ -70,6 +70,8 @@ all_motion_sensors:
   entities:
     - binary_sensor.thomas_sensor
     - binary_sensor.office_motion_sensor
+    - binary_sensor.hall_motion
+    - binary_sensor.landing_motion
 
 links:
   entities:
@@ -86,6 +88,8 @@ motion:
     - input_boolean.enable_security
     - binary_sensor.thomas_sensor
     - binary_sensor.office_motion_sensor
+    - binary_sensor.hall_motion
+    - binary_sensor.landing_motion
 
 lights:
   entities:
