Update travis_secrets.yaml to fix build

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -15,3 +15,5 @@ thomas_camera_bed_url: ''
 thomas_camera_floor_url: ''
 thomas_camera_door_url: ''
 thomas_camera_reboot: ''
+get_hall_motion_status: ''
+get_landing_motion_status: ''
